Se carga el icono ahora en el index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <div class="circle">
-      <img src="C:\Users\usuario\Desktop\CML5\recursos\logo.png" alt="Icono de laboratorio">
+      <img src="recursos\logo.png" alt="Icono de laboratorio">
     </div>
     <h1>¡BIENVENIDOS AL<br>LABORATORIO DE CIENCIAS!</h1>
     <button id="btn-siguiente"><a href="busqueda.html">Siguiente</a></button>
